# acceleration

./: .gitignore  CMakeLists.txt
cmake/: config.cmake.in
examples/: CMakeLists.txt  example_eigen.cpp  example_glm.cpp
include/acc/: BVHNode.hpp  BoundingBox.hpp  Builder.hpp  Common.hpp  Config.hpp  DynamicArrayDevice.hpp  DynamicBVH.hpp  DynamicBVHNode.hpp  FixedStack.hpp  KDTree.hpp  MortonCode.hpp  Query.hpp  Ray.hpp  StaticBVH.hpp  StaticBVHDevice.hpp  StaticBVHNode.hpp  StaticStack.hpp  TriUtils.hpp  Vec3Op.hpp
